force-app/main/default/objects/Program__c/fields/Account_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Account_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>