force-app/main/default/objects/Program__c/fields/Application_Link__c.field-meta.xml
<CustomField>
    <fullName>Application_Link__c</fullName>
    <label>Application Link</label>
    <type>Url</type>
</CustomField>