force-app/main/default/objects/Program__c/fields/Branded_Announcement__c.field-meta.xml
<CustomField>
    <fullName>Branded_Announcement__c</fullName>
    <description>program acceptance social media post</description>
    <label>Branded Announcement</label>
    <type>Url</type>
</CustomField>