force-app/main/default/objects/Program__c/fields/Count_of_Total_Media_Placements__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Total_Media_Placements__c</fullName>
    <label>Count of Total Media Placements</label>
    <summaryForeignKey>Media_Placement__c.Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>