force-app/main/default/objects/Program__c/fields/Count_of_Total_Print_Media_Placements__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Total_Print_Media_Placements__c</fullName>
    <label>Count of Total Print Media Placements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>