force-app/main/default/objects/Program__c/fields/Email_Outreach_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Outreach_Template__c</fullName>
    <label>Email Outreach Template</label>
    <type>Url</type>
</CustomField>