force-app/main/default/objects/Program__c/fields/First_Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Reporting_Date__c</fullName>
    <label>First Reporting Date</label>
    <type>Date</type>
</CustomField>