force-app/main/default/objects/Program__c/fields/Homework_link__c.field-meta.xml
<CustomField>
    <fullName>Homework_link__c</fullName>
    <label>Homework Link</label>
    <type>Url</type>
</CustomField>