force-app/main/default/objects/Program__c/fields/Homework_Questions__c.field-meta.xml
<CustomField>
    <fullName>Homework_Questions__c</fullName>
    <label>Homework Questions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>