force-app/main/default/objects/Program__c/fields/NextGenId__c.field-meta.xml
<CustomField>
    <fullName>NextGenId__c</fullName>
    <externalId>true</externalId>
    <label>NextGenId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>