force-app/main/default/objects/Program__c/fields/Nmber_of_Student_Translators__c.field-meta.xml
<CustomField>
    <fullName>Nmber_of_Student_Translators__c</fullName>
    <label>Nmber of Student Translators</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>