force-app/main/default/objects/Program__c/fields/Number_of_Recruits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Recruits__c</fullName>
    <label>Number of Recruits</label>
    <summaryFilterItems>
        <field>Student_Programs__c.Tier__c</field>
        <operation>equals</operation>
        <value>Recruit</value>
    </summaryFilterItems>
    <summaryForeignKey>Student_Programs__c.Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>