force-app/main/default/objects/Program__c/fields/Other_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Other_Social_Media__c</fullName>
    <label>Other Social Media</label>
    <type>TextArea</type>
</CustomField>