force-app/main/default/objects/Program__c/fields/Program_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Program_Deliverables__c</fullName>
    <label>Program Deliverables</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>