force-app/main/default/objects/Program__c/fields/Program_Length__c.field-meta.xml
<CustomField>
    <fullName>Program_Length__c</fullName>
    <formula>Program_End_Date__c - Program_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>