force-app/main/default/objects/Program__c/fields/Program_of_Weekly_Hours__c.field-meta.xml
<CustomField>
    <fullName>Program_of_Weekly_Hours__c</fullName>
    <label>Program # of Weekly Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>