force-app/main/default/objects/Program__c/fields/Program_Requires_Background_Check__c.field-meta.xml
<CustomField>
    <fullName>Program_Requires_Background_Check__c</fullName>
    <label>Program Requires Background Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>