force-app/main/default/objects/Program__c/fields/Program_Summary__c.field-meta.xml
<CustomField>
    <fullName>Program_Summary__c</fullName>
    <label>Program Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>