force-app/main/default/objects/Program__c/fields/Program_Website__c.field-meta.xml
<CustomField>
    <fullName>Program_Website__c</fullName>
    <label>Program Website</label>
    <type>Url</type>
</CustomField>