force-app/main/default/objects/Program__c/fields/Recruiting_Summary__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Summary__c</fullName>
    <label>Recruiting_Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>