force-app/main/default/objects/Program__c/fields/Recruitment_Lead__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruitment Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Programs (Recruitment Lead)</relationshipLabel>
    <relationshipName>Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>