force-app/main/default/objects/Program__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <label>Semester</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Winter</fullName>
            </value>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>