force-app/main/default/objects/Program__c/fields/Shipping_Form__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Form__c</fullName>
    <label>Shipping Form</label>
    <type>Url</type>
</CustomField>