force-app/main/default/objects/Program__c/fields/Total_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee__c</fullName>
    <label>Program Total Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>