force-app/main/default/objects/Program__c/fields/Total_Media_Program_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Media_Program_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Media Program Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>