force-app/main/default/objects/Program__c/fields/Total_Media_Program_Budget_Executed__c.field-meta.xml
<CustomField>
    <fullName>Total_Media_Program_Budget_Executed__c</fullName>
    <label>Total Media Program Budget Executed</label>
    <summarizedField>Media_Placement__c.Total_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Media_Placement__c.Stage__c</field>
        <operation>equals</operation>
        <value>Executed</value>
    </summaryFilterItems>
    <summaryForeignKey>Media_Placement__c.Program__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>