force-app/main/default/objects/Program__c/fields/Total_Number_of_Students_Hired__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Students_Hired__c</fullName>
    <inlineHelpText>Formula to count Student Program records status = Hired to Program</inlineHelpText>
    <label>Total Number of Students Hired</label>
    <summaryFilterItems>
        <field>Student_Programs__c.Status__c</field>
        <operation>equals</operation>
        <value>Hired to program</value>
    </summaryFilterItems>
    <summaryForeignKey>Student_Programs__c.Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>