force-app/main/default/objects/Program__c/fields/Total_Number_of_Students_Still_Needed__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Students_Still_Needed__c</fullName>
    <formula>Total_Number_of_Students_To_Be_Hired__c  -Total_Number_of_Students_Hired__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula of To be hired minus Hired</inlineHelpText>
    <label>Total Number of Students Still Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>