force-app/main/default/objects/Program__c/fields/Total_Number_of_Students_To_Be_Hired__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Students_To_Be_Hired__c</fullName>
    <inlineHelpText>Manually enter total number of students that&apos;s needed to be hired for the program</inlineHelpText>
    <label>Total Number of Students To Be Hired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>