force-app/main/default/objects/Program__c/fields/UR_Lead__c.field-meta.xml
<CustomField>
    <fullName>UR_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UR Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Programs (UR Lead)</relationshipLabel>
    <relationshipName>Programs2</relationshipName>
    <type>Lookup</type>
</CustomField>