force-app/main/default/objects/Program__c/fields/Week_of_Kit_Mailing__c.field-meta.xml
<CustomField>
    <fullName>Week_of_Kit_Mailing__c</fullName>
    <label>Week of Kit Mailing</label>
    <type>Date</type>
</CustomField>