force-app/main/default/objects/Program__c/fields/Week_of_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_of_Start_Date__c</fullName>
    <label>Week of Start Date</label>
    <type>Date</type>
</CustomField>