force-app/main/default/objects/Program__c/fields/Weekly_Program_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Program_Objectives__c</fullName>
    <label>Weekly Program Objectives</label>
    <type>TextArea</type>
</CustomField>