force-app/main/default/objects/Program__c/fields/Welcome_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Document_ID__c</fullName>
    <label>Welcome Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>