force-app/main/default/objects/Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Number_Active_Students__c</columns>
    <columns>Number_of_Recruits__c</columns>
    <columns>Program_Start_Date__c</columns>
    <columns>Program_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>