force-app/main/default/objects/Program__c/listViews/Spring_2024.listView-meta.xml
<ListView>
    <fullName>Spring_2024</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>2024</value>
    </filters>
    <label>2024 Programs</label>
</ListView>