force-app/main/default/objects/Program__c/listViews/X2013_Programs.listView-meta.xml
<ListView>
    <fullName>X2013_Programs</fullName>
    <columns>NAME</columns>
    <columns>Application_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Fall 2022</value>
    </filters>
    <label>2022 Programs</label>
    <sharedTo>
        <group>University_Users</group>
    </sharedTo>
</ListView>