force-app/main/default/objects/Program__c/listViews/X2017_Programs.listView-meta.xml
<ListView>
    <fullName>X2017_Programs</fullName>
    <columns>NAME</columns>
    <columns>Program_Start_Date__c</columns>
    <columns>Program_End_Date__c</columns>
    <columns>Program_Length__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>2017</value>
    </filters>
    <label>2017 Programs</label>
    <sharedTo>
        <group>University_Users</group>
    </sharedTo>
</ListView>