force-app/main/default/objects/Program__c/listViews/X2019_Programs.listView-meta.xml
<ListView>
    <fullName>X2019_Programs</fullName>
    <columns>NAME</columns>
    <columns>Number_Active_Students__c</columns>
    <columns>Number_of_Schools__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>2019</value>
    </filters>
    <label>2019 Programs</label>
    <sharedTo>
        <group>University_Users</group>
    </sharedTo>
</ListView>