force-app/main/default/objects/Program__c/listViews/X2020_Programs.listView-meta.xml
<ListView>
    <fullName>X2020_Programs</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>2020</value>
    </filters>
    <label>2020 Programs</label>
    <sharedTo>
        <group>University_Users</group>
    </sharedTo>
</ListView>